--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
-<form id="attendanceForm">
-    <label for="studentId">Student ID:</label>
-    <input type="text" id="studentId" name="studentId" required />
-    <label for="code">One-Time Code:</label>
-    <input type="text" id="code" name="code" required />
-    <button type="submit">Mark Attendance</button>
-</form>
-<script>
-document.getElementById('attendanceForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
-    const studentId = document.getElementById('studentId').value;
-    const code = document.getElementById('code').value;
-    const response = await fetch('https://your-backend-url.com/student/mark', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ studentId, code })
-    });
-    const result = await response.json();
-    alert(result.message);
-});
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Attendance System</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Student Attendance System</h1>
+    <form id="attendanceForm">
+        <label for="studentId">Student ID:</label>
+        <input type="text" id="studentId" required><br><br>
+        <label for="code">One-Time Code:</label>
+        <input type="text" id="code" required><br><br>
+        <button type="submit">Mark Attendance</button>
+    </form>
+    <script src="script.js"></script>
+</body>
+</html>
